# mattak

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL.md  Makefile  README.md  make_version.sh  pyproject.toml  rootlogon.C  setup.py  version.cmake
.github/workflows/: install.yaml
doc/: ReadingData.md
examples/: avgSpec.C  compositeEvent.C  plot_wfs.C  read_with_cable_delays.py  remote-webbrowse.sh  spectrogram.C  webbrowse.C  webbrowse.htm  webbrowse.sh
prog/: rno-g-combine.cc  rno-g-convert.cc  rno-g-count-events.cc  rno-g-make-eventlist.cc  rno-g-readout-elapsed.cc  rno-g-summary-tree.cc  rno-g-test-apply-voltage-calibration.cc  rno-g-test-voltage-calibration.cc
py/mattak/: Dataset.py
py/mattak/backends/pyroot/: dataset.py  mattakloader.py
py/mattak/backends/uproot/: dataset.py  voltage_calibration.py
scripts/: README.md  collect_event_info_uproot.py  collect_runinfo.py  compare_dirs.sh  compare_station_files_with_summit.sh  convert_bias_scan_to_calibration.py  create_monitoring_data.py  makeFakeData.C  makeFakeDataToTestVoltageCalibration.C  makeFakeDataToTestVoltageCalibration.cc  makeFakeDataToTestVoltageCalibrationWaveforms.C  makeFakeDataToTestVoltageCalibrationWaveforms.cc  makeFakeDataToTestVoltageCalibrationWaveforms.out  mon_read.py  mon_write.py  plot_voltage_calibration_waveforms.py  rno-g-autoconverter  rno-g-convert-run  rno-g-convert-station  rno-g-make-eventlists  rno-g-reconvert
scripts/daq/: rno-g-autoconverter  rno-g-check-daqstatus  rno-g-convert-run
scripts/metadata/: plot_flower_meta_data.py  read_daqstatus.py
scripts/monitoring/: calpulser_trigger_efficiency.py  mon_read.py  plot_calpulser_amplitudes.py  plot_calpulser_dt.py
scripts/services/: README.md  rno-g-autoconverter.target  rno-g-autoconverter@.service  tmux_follow_services.sh
scripts/voltage_calibration/: makeFakeDataToTestVoltageCalibrationWaveforms.cc  plot_voltage_calibration.py  rno-g-rename-calibration-files  rno-g-run-missing-voltage-calibration
scripts/voltage_calibration/waveforms/: template4_wo_hardwareResponse_max_amp_100.txt  template4_wo_hardwareResponse_max_amp_20.txt  template4_wo_hardwareResponse_max_amp_50.txt  template4_wo_hardwareResponse_max_amp_500.txt
scripts/waveforms/: template4_wo_hardwareResponse_max_amp_200.txt
src/: Converter.cc  DAQStatus.cc  Dataset.cc  Detector.cc  GNSS.cc  Header.cc  LinkDef.h  Monitoring.cc  Pedestals.cc  RunInfo.cc  Sensors.cc  TriggerInfo.cc  Version.cc  Version.cc.in  VoltageCalibration.cc  Waveforms.cc
src/mattak/: Constants.h  Converter.h  DAQStatus.h  Dataset.h  Detector.h  GNSS.h  Header.h  Monitoring.h  Pedestals.h  RunInfo.h  Sensors.h  TriggerInfo.h  Version.h  VoltageCalibration.h  Waveforms.h
tests/: benchmark_dataset.py  compare_backends.py  evaluate_benchmarks.py  leak_test.py  mon_read.py  mon_write.py  monitoring.py  monitoring_test.py  test_dataset.py  test_dataset_all.py  test_dataset_filter.py
