[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.cmake = true
sdist.include = ['CMakeLists.txt']
wheel.packages = ['src', "py/mattak"]
wheel.install-dir = "mattak"

[tool.scikit-build.cmake.define]
RNO_G_INSTALL_DIR = {env="RNO_G_INSTALL_DIR", default="./build"}

[project]
name = "mattak"
version = "0.1"
